--- a/index.html
+++ b/index.html
@@ -5,8 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookmarkleter</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
 </head>
 <body>
-    <h1>Welcome</h1>
+    <div class="container mt-3">
+        <h1>Bookmarkleter</h1>
+        <h2>You have JavaScript. You need a bookmarklet. This does that.</h2>
+        <form>
+            <label class="form-label mt-3">Options:</label>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="iife">
+                <label class="form-check-label" for="iife">
+                    Wrap with IIFE
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="jquery">
+                <label class="form-check-label" for="jquery">
+                    Ensure jQuery 3.6 is available
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="uglify">
+                <label class="form-check-label" for="uglify">
+                    Minify with UglifyJS
+                </label>
+            </div>
+            <div class="mt-3">
+                <label for="bookmarkletName" class="form-label">Bookmarklet name:</label>
+                <input type="text" name="bookmarkletName" id="bookmarkletName" class="form-control" value="My Bookmarklet">
+            </div>
+            <div class="mt-3">
+                <label for="inputText" class="form-label">Input code:</label>
+                <textarea name="inputText" id="inputText" class="form-control" rows="8"></textarea>
+            </div>
+            <div class="mt-3 mb-3">
+                <label for="outputText" class="form-label">Output code:</label>
+                <textarea name="outputText" id="outputText" class="form-control" rows="8" readonly></textarea>
+            </div>
+        </form>
+        <p>Drag this link to your bookmarks bar: <a href="javascript:void function(){}();">My Bookmarklet</a></p>
+    </div>
+    <a class="github-fork-ribbon" href="https://github.com/seguri/bookmarkleter" data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
 </body>
 </html>
