--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
         <p>Drag this link to your bookmarks bar: <a href="javascript:void function(){}();">My Bookmarklet</a></p>
     </div>
     <a class="github-fork-ribbon" href="https://github.com/seguri/bookmarkleter" data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
+    <script src="uglifyjs.js"></script>
 </body>
 </html>
