--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container mt-3">
         <h1>Bookmarkleter</h1>
         <h2>You have JavaScript. You need a bookmarklet. This does that.</h2>
-        <form>
+        <form onsubmit="return false;">
             <label class="form-label mt-3">Options:</label>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="iife">
@@ -27,8 +27,8 @@
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="uglify">
-                <label class="form-check-label" for="uglify">
+                <input class="form-check-input" type="checkbox" value="" id="minify">
+                <label class="form-check-label" for="minify">
                     Minify with UglifyJS
                 </label>
             </div>
@@ -37,17 +37,18 @@
                 <input type="text" name="bookmarkletName" id="bookmarkletName" class="form-control" value="My Bookmarklet">
             </div>
             <div class="mt-3">
-                <label for="inputText" class="form-label">Input code:</label>
-                <textarea name="inputText" id="inputText" class="form-control" rows="8"></textarea>
+                <label for="code" class="form-label">Input code:</label>
+                <textarea name="code" id="code" class="form-control" rows="8">function add(first, second) { return first + second; }</textarea>
             </div>
             <div class="mt-3 mb-3">
                 <label for="outputText" class="form-label">Output code:</label>
                 <textarea name="outputText" id="outputText" class="form-control" rows="8" readonly></textarea>
             </div>
         </form>
-        <p>Drag this link to your bookmarks bar: <a href="javascript:void function(){}();">My Bookmarklet</a></p>
+        <p>Drag this link to your bookmarks bar: <a href="javascript:void function(){}();" id="link">My Bookmarklet</a></p>
     </div>
     <a class="github-fork-ribbon" href="https://github.com/seguri/bookmarkleter" data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
     <script src="uglifyjs.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
