--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@ function add(first, second) { return first + second; }</textarea
       target="_blank"
       >Fork me on GitHub</a
     >
-    <script src="index.js"></script>
+    <script src="bundle.min.js"></script>
   </body>
 </html>
